<resources>
    <string name="app_name">Chat App</string>
    <string name="logo_content_description">Logo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_text_log_in">Log in</string>
    <string name="button_text_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_log_out">Log out</string>
    <string name="hint_set_theme">Set theme</string>
    <string name="avatar">Avatar</string>
    <string name="mail_place_holder">test@mail.com</string>
    <string name="hint_message">Message</string>
</resources>