<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_contact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">

        <ImageView
            android:id="@+id/image_view_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_android_black_24dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="7dp"
            android:paddingTop="7dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/text_view_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_username"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_username"
                android:text="@string/mail_place_holder"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>